<resources>
    <string name="app_name">WIA2007 MAD</string>
    <string name="title_activity_three_different_pages">ThreeDifferentPages</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="online">Online</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title1">How to edit your profile?</string>
    <string name="title2">How to reset my password</string>
    <string name="title3">Log out of your account</string>
    <string name="title4">How do I search for something within a section</string>
    <string name="title5">How emergency locator access my location</string>
    <string name="title6">How can I join the workshop?</string>
    <string name="title7">What is this app for?</string>
    <string name="title8">How can I benefited from this app?</string>
    <string name="title9">Is my personal data secured?</string>
    <string name="title10">How frequent is the content in this app updated?</string>
    <string name="content1">1. Navigate to profile section\n2. Click the edit button\n3. Update your profile data\n4. Press update</string>
    <string name="content2">1. Navigate to setting section\n2. Search for change password\n3. Update your password.\n4. Follow the prompt and email confirmation</string>
    <string name="content3">1. Navigate to setting section\n2. Search for log out</string>
    <string name="content4">- A search bar is contained within the top of searchable contents</string>
    <string name="content5">- Only accurate location are perceived from devices when the emergency locator is accessed, we do not collect user\'s location for malicious purpose.</string>
    <string name="content6">- Social market and E-learning modules do provide workshop to enhance knowledge</string>
    <string name="content7">- This app is primarily as an initiative to achieve SDG 5 goals as well as to promote gender equality</string>
    <string name="content8">- Gender doesn\'t matter. However females will find useful resources accessible in our app.</string>
    <string name="content9">- Yes, your data is stored within a secured database. Unauthorized third party will not gain access to the data and we are responsible to keep safe of our data.</string>
    <string name="content10">-  The content of HerJourney is updated weekly.</string>
    <string name="scholarshiplink1">https://www.daikinmalaysia.com/career/scholarship-program/</string>
    <string name="scholarshiptitletitle1">Daikin Malaysia Group Scholarship Programme</string>
    <string name="scholarshipdeadline1">31/12/2023</string>
    <string name="scholarshipdescription1">Overview
Daikin, the world’s no. 1 air conditioning company, is offering a scholarship to eligible students who have already gained acceptance into Malaysian Public or Private Universities pursuing their 1st-year degree programme.

Criteria
Applicant must meet all the below requirements

Malaysian
Full-time student
The student is pursuing a Bachelor’s Degree
Already gained acceptance into Malaysia Universities (IPTA/IPTS). Preference will be given to students from IPTA.
Possess good academic result:
Students who will enrol into a 1st-year degree program
SPM or equivalent – min 6As + pass all subjects. Good results in Mathematics, English, and Bahasa Malaysia.
STPM/ Pre-University/ Local Matriculation/ Diploma/ Foundation – min CGPA 3.00 &amp; above.
MUET – min Band 4.
Students currently pursuing a 1st-year degree program
SPM or equivalent – min 6As + pass all subjects. Good results in Mathematics, English, and Bahasa Malaysia.
STPM or equivalent – min 2As + pass all subjects.
MUET – min Band 4.
Min GPA or CGPA 3.00
Actively participated in co-curriculum activities and displayed outstanding leadership qualities
Strong communications skills
Possess a positive attitude
Medically fit
Have not received any other financial aid from any organization
Scholars who are free from any future employment obligations
Students who meet the above criteria (1 to 11) are welcome to apply. However, preference will be given to students from families with a household income of RM5,000 per month or below.
Preferred Discipline
Bachelor’s Degree in:

Engineering (preferably in Electrical &amp; Electronics, Mechanical, Mechatronic, Manufacturing)
IT
Accounting
Business/Management
Amount Info
Scholar’s Obligations:

Serves a bond with company offering the scholarship for a minimum of duration sponsor.
The bond will start immediately upon completion of degree course with the appointment letter given within 3 months period.
Scholar will be required to work in the sponsor company or any subsidiary companies within Daikin Malaysia Group.
Perform internship in the sponsor company or at any subsidiary within Daikin Malaysia Group during semester break.
Scholar shall reimburse 100% of the scholarship fees should he/she resign from the company or is terminated during the period of the bond.
How to apply for Daikin Malaysia Group Scholarship Program 2023
Application form can be downloaded from https://www.daikinmalaysia.com/career/scholarship-program/
Applications are open for submission now and close on 31st December 2023.
For any further enquiries, please contact us:
Ms. Kay Lee Yen Hui (603-6145 8632)
Ms. Farah Syuhada Binti Mohd Rosli (03-6145 8378)
Ms. Chong Pui Theng (603-6145 8603)
Applicants shall submit their application through softcopy or hardcopy.
(Softcopy): Submit to daikin.scholarship@daikin.com.my with all documents attached in PDF format.

(Hardcopy): Send the complete document to the following address:

Attention: Ms. Kay Lee Yen Hui / Ms. Farah Syuhada Binti Mohd Rosli/ Ms. Chong Pui Theng

(Human Resources Department)

DAIKIN MALAYSIA SDN. BHD.

Lot 60334, Persiaran Bukit Rahman Putra 3,

Taman Perindustrian Bukit Rahman Putra,

47000 Sungai Buloh, Selangor D.E. Malaysia.

Selection

Only shortlisted scholars will be called for interview. The shortlisted candidates will be notified 2 weeks after application deadline.
The final selection will be based on interview results.
THE FOLLOWING APPLICATION WILL NOT BE PROCESSED:

Incomplete submission of documents.
Scholars (students) who do not meet the criteria in para (1).
Application received after the deadline.
Download Application Form as Below.

• DAIKIN MALAYSIA GROUP SCHOLARSHIP PROGRAM APPLICATION FORM 2023 (Excel).

• DAIKIN MALAYSIA GROUP SCHOLARSHIP PROGRAM APPLICATION FORM 2023 (PDF).

Contact Info
For more information, please contact:

Phone:
60361458632
Email:
daikin.scholarship@daikin.com.my</string>
    <string name="scholarshiptitletitle2">Biasiswa Sunway Scholarship</string>
    <string name="scholarshipdeadline2">OPEN</string>
    <string name="scholarshipdescription2">New Sunway Scholarships 2022 for SPM &amp; O-Level Leavers Not sure what’s next after SPM or O-Level? Start your next journey at Sunway with our lucrative scholarships. Choose from Pre-U, ADTP, Diploma and Accounting programmes.  Jeffrey Cheah Entrance Scholarship 2022 APPLICATION DEADLINE: 2 weeks after commencement of programmes or 2 weeks after the release of actual results  a ) For Pre-University &amp; Certified Accounting Technician(CAT) &amp; Certificate in Finance, Accounting &amp; Business (CFAB)  b) For American Degree Transfer Program (ADTP)  c) For Diploma Programmes  d) For Degree Programmes  e) For Association of Chartered Certified Accountants (ACCA) &amp; The Institute of Chartered Accountants in England &amp; Wales (ICAEW) Programmes</string>
    <string name="scholarshiplink3">https://www.sheffield.ac.uk/international/fees-and-funding/scholarships/postgraduate/great-scholarships/malaysia#:~:text=The%20GREAT%20Scholarships%202024%20programme,world-class%20UK%20higher%20education</string>
    <string name="scholarshiptitletitle3">Biasiswa British Council GREAT Scholarships 2024</string>
    <string name="scholarshipdeadline3">OPEN</string>
</resources>