<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingTop="100dp"
    tools:context=".AllModules.InfoFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginBottom="80dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <hakobastvatsatryan.DropdownTextView
                android:id="@+id/dropdown_text_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title_font="@font/inter"
                app:title_text="@string/title1"
                app:title_text_color="@color/black"
                app:title_text_size="20sp"
                app:content_font="@font/inter_light"
                app:content_padding="10dp"
                app:content_text="@string/content1"
                app:content_text_color="@color/black"
                app:content_text_size="14sp"
                app:arrow_drawable="@drawable/arrowdown"
                app:bg_drawable_regular="@color/white"
                app:bg_drawable_expanded="@color/white"
                app:expand_duration="@integer/material_motion_duration_long_1"
                app:panel_padding="20dp"/>
            <hakobastvatsatryan.DropdownTextView
                android:id="@+id/dropdown_text_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title_font="@font/inter"
                app:title_text="@string/title2"
                app:title_text_color="@color/black"
                app:title_text_size="20sp"
                app:content_font="@font/inter_light"
                app:content_padding="10dp"
                app:content_text="@string/content2"
                app:content_text_color="@color/black"
                app:content_text_size="14sp"
                app:arrow_drawable="@drawable/arrowdown"
                app:bg_drawable_regular="@color/white"
                app:bg_drawable_expanded="@color/white"
                app:expand_duration="@integer/material_motion_duration_long_1"
                app:panel_padding="20dp"/>
            <hakobastvatsatryan.DropdownTextView
                android:id="@+id/dropdown_text_view3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title_font="@font/inter"
                app:title_text="@string/title3"
                app:title_text_color="@color/black"
                app:title_text_size="20sp"
                app:content_font="@font/inter_light"
                app:content_padding="10dp"
                app:content_text="@string/content3"
                app:content_text_color="@color/black"
                app:content_text_size="14sp"
                app:arrow_drawable="@drawable/arrowdown"
                app:bg_drawable_regular="@color/white"
                app:bg_drawable_expanded="@color/white"
                app:expand_duration="@integer/material_motion_duration_long_1"
                app:panel_padding="20dp"/>
            <hakobastvatsatryan.DropdownTextView
                android:id="@+id/dropdown_text_view4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title_font="@font/inter"
                app:title_text="@string/title4"
                app:title_text_color="@color/black"
                app:title_text_size="20sp"
                app:content_font="@font/inter_light"
                app:content_padding="10dp"
                app:content_text="@string/content4"
                app:content_text_color="@color/black"
                app:content_text_size="14sp"
                app:arrow_drawable="@drawable/arrowdown"
                app:bg_drawable_regular="@color/white"
                app:bg_drawable_expanded="@color/white"
                app:expand_duration="@integer/material_motion_duration_long_1"
                app:panel_padding="20dp"/>
            <hakobastvatsatryan.DropdownTextView
                android:id="@+id/dropdown_text_view5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title_font="@font/inter"
                app:title_text="@string/title5"
                app:title_text_color="@color/black"
                app:title_text_size="20sp"
                app:content_font="@font/inter_light"
                app:content_padding="10dp"
                app:content_text="@string/content5"
                app:content_text_color="@color/black"
                app:content_text_size="14sp"
                app:arrow_drawable="@drawable/arrowdown"
                app:bg_drawable_regular="@color/white"
                app:bg_drawable_expanded="@color/white"
                app:expand_duration="@integer/material_motion_duration_long_1"
                app:panel_padding="20dp"/>
            <hakobastvatsatryan.DropdownTextView
                android:id="@+id/dropdown_text_view6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title_font="@font/inter"
                app:title_text="@string/title6"
                app:title_text_color="@color/black"
                app:title_text_size="20sp"
                app:content_font="@font/inter_light"
                app:content_padding="10dp"
                app:content_text="@string/content6"
                app:content_text_color="@color/black"
                app:content_text_size="14sp"
                app:arrow_drawable="@drawable/arrowdown"
                app:bg_drawable_regular="@color/white"
                app:bg_drawable_expanded="@color/white"
                app:expand_duration="@integer/material_motion_duration_long_1"
                app:panel_padding="20dp"/>
            <hakobastvatsatryan.DropdownTextView
                android:id="@+id/dropdown_text_view7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title_font="@font/inter"
                app:title_text="@string/title7"
                app:title_text_color="@color/black"
                app:title_text_size="20sp"
                app:content_font="@font/inter_light"
                app:content_padding="10dp"
                app:content_text="@string/content7"
                app:content_text_color="@color/black"
                app:content_text_size="14sp"
                app:arrow_drawable="@drawable/arrowdown"
                app:bg_drawable_regular="@color/white"
                app:bg_drawable_expanded="@color/white"
                app:expand_duration="@integer/material_motion_duration_long_1"
                app:panel_padding="20dp"/>
            <hakobastvatsatryan.DropdownTextView
                android:id="@+id/dropdown_text_view8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title_font="@font/inter"
                app:title_text="@string/title8"
                app:title_text_color="@color/black"
                app:title_text_size="20sp"
                app:content_font="@font/inter_light"
                app:content_padding="10dp"
                app:content_text="@string/content8"
                app:content_text_color="@color/black"
                app:content_text_size="14sp"
                app:arrow_drawable="@drawable/arrowdown"
                app:bg_drawable_regular="@color/white"
                app:bg_drawable_expanded="@color/white"
                app:expand_duration="@integer/material_motion_duration_long_1"
                app:panel_padding="20dp"/>
            <hakobastvatsatryan.DropdownTextView
                android:id="@+id/dropdown_text_view9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title_font="@font/inter"
                app:title_text="@string/title9"
                app:title_text_color="@color/black"
                app:title_text_size="20sp"
                app:content_font="@font/inter_light"
                app:content_padding="10dp"
                app:content_text="@string/content9"
                app:content_text_color="@color/black"
                app:content_text_size="14sp"
                app:arrow_drawable="@drawable/arrowdown"
                app:bg_drawable_regular="@color/white"
                app:bg_drawable_expanded="@color/white"
                app:expand_duration="@integer/material_motion_duration_long_1"
                app:panel_padding="20dp"/>
            <hakobastvatsatryan.DropdownTextView
                android:id="@+id/dropdown_text_view10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title_font="@font/inter"
                app:title_text="@string/title10"
                app:title_text_color="@color/black"
                app:title_text_size="20sp"
                app:content_font="@font/inter_light"
                app:content_padding="10dp"
                app:content_text="@string/content10"
                app:content_text_color="@color/black"
                app:content_text_size="14sp"
                app:arrow_drawable="@drawable/arrowdown"
                app:bg_drawable_regular="@color/white"
                app:bg_drawable_expanded="@color/white"
                app:expand_duration="@integer/material_motion_duration_long_1"
                app:panel_padding="20dp"/>
        </LinearLayout>

    </ScrollView>


</LinearLayout>